# pyfwh

./: .gitignore  README.md  pyproject.toml  run_tests.py
pyfwh/: __init__.py  observer.py  retarded_time.py  solver.py  surface.py
pyfwh/io/: __init__.py  base.py  csv_reader.py
pyfwh/utils/: __init__.py  test_cases.py
