[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyfwh"
version = "0.1.0"
description = "FWH aeroacoustic solver - Farassat Formulation 1A"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfwh*"]